@@ -13,12 +13,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.springframework.osgi.extender.internal.support;
 
 import org.springframework.context.ApplicationEvent;
 import org.springframework.context.ApplicationListener;
 import org.springframework.context.event.ApplicationEventMulticaster;
-
 
 /**
  * @author Costin Leau
@@ -37,4 +37,8 @@ public class DummyApplicationEventMulticaster implements ApplicationEventMultica
 	public void removeApplicationListener(ApplicationListener arg0) {
 	}
 
+	public void addApplicationListenerBean(String listenerBeanName) {
+	}
+	
+	
 }
